ci(release-please): use the 💎 emoji in the PR title for releases

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,5 +1,5 @@
 {
-  "pull-request-title-pattern": "chore: release${component} ${version}",
+  "pull-request-title-pattern": "chore: release 💎 ${version}",
   "packages": {
     ".": {
       "changelog-path": "History.markdown",
