--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -9,7 +9,8 @@
       "draft": false,
       "prerelease": false,
       "include-component-in-tag": false,
-      "include-v-in-tag": true
+      "include-v-in-tag": true,
+      "version-file": "lib/jekyll_test_plugin/version.rb"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
